Renaming Pyproject into TomlConfig (#259)
* Switching from Pyproject to TomlConfig to better capture what the class is doing

* refactor: Renaming Pyproject into TomlConfig for better capturing what it does

* fmt

* Switch back to `PyprojectHandler`

* fmt

* rename to `TomlFile` and move into `kraken.common.toml`

---------

Co-authored-by: Niklas Rosenstein <rosensteinniklas@gmail.com>

--- a/.changelog/_unreleased.toml
+++ b/.changelog/_unreleased.toml
@@ -1,4 +1,10 @@
 [[entries]]
+id = "7e50c02f-8a42-4877-a64c-21fedb04dab5"
+type = "refactor"
+description = "Renamed `Pyproject` into `TomlFile` for better capturing what it does and moved it to `kraken.common.toml`."
+author = "alexandre.ghelfi@helsing.ai"
+
+[[entries]]
 id = "00907a4a-2abe-43a5-a134-d96aaf0bdbdb"
 type = "docs"
 description = "Fixing typo in README"
