--- a/kraken-wrapper/pyproject.toml
+++ b/kraken-wrapper/pyproject.toml
@@ -54,12 +54,7 @@ warn_redundant_casts = true
 warn_unreachable = true
 warn_unused_ignores = true
 
-[tool.isort]
-combine_as_imports = true
-line_length = 120
-profile = "black"
-
-[tool.black]
+[tool.ruff]
 line-length = 120
 
 [tool.pytest.ini_options]
