--- a/.changelog/_unreleased.toml
+++ b/.changelog/_unreleased.toml
@@ -17,6 +17,12 @@ description = "move `kraken.std.git.gitignore.parser` to `kraken.common.gitignor
 author = "@NiklasRosenstein"
 
 [[entries]]
+id = "bbdd557d-b4c2-4ba6-9adc-66c18f51a44c"
+type = "hygiene"
+description = "Eliminate `nr-io-graphviz` dependency and update `databind` to min `4.5.0`"
+author = "@NiklasRosenstein"
+
+[[entries]]
 id = "0a74ab07-f895-48e8-8842-6c5382ba8402"
 type = "refactor"
 description = "Eliminate `nr-stream` dependency"
