--- a/kraken-build/pyproject.toml
+++ b/kraken-build/pyproject.toml
@@ -37,14 +37,13 @@ kraken = "kraken.core.cli.main:main"
 # ------------
 
 [tool.poetry.dependencies]
-databind-json = "^4.2.5"
+databind = "^4.5.0"
 dataclasses = {version = "^0.6", python = "<3.7"}
 deprecated = "^1.2.13"
 dill = ">=0.3.8,<0.4.0"
 httpx = "^0.27.0"
 keyring = "^25.0.0"
 networkx = "^3.1"
-nr-io-graphviz = "^0.1.1"
 packaging = "^23.1"
 pex = "^2.1.156"
 python = ">=3.10"
@@ -64,6 +63,7 @@ types-Deprecated = "^1.2.9"
 types-requests = "^2.28.0"
 pytest-xdist = {version = "^3.5.0", extras = ["psutil"]}
 mitmproxy = "^10.2.4"
+types-networkx = "^3.2.1.20240703"
 
 # Slap configuration
 # ------------------
@@ -88,11 +88,6 @@ warn_redundant_casts = true
 warn_unreachable = true
 warn_unused_ignores = true
 enable_error_code = "ignore-without-code, possibly-undefined"
-
-[[tool.mypy.overrides]]
-ignore_errors = true
-ignore_missing_imports = true
-module = "networkx.*"
 
 [tool.ruff]
 line-length = 120
