improvement: Replace `rich` logger with `loguru` which produces nicer log formatting and requires less setup (#250)
* improvement: Replace `rich` logger with `loguru` which produces nicer log formatting and requires less setup

* enable selftest CI to see log format in CI

* more thoroughly switch to loguru

* fix

* Remove Loguru loggers from pickle

* add Loguru intercept handler

* because of the intercept handler we can continue to use a standard logger

* use loguru for global logs in Task class

* stick to the default loggers for most stuff now

* add changelog

* more logger reverts

--- a/kraken-build/pyproject.toml
+++ b/kraken-build/pyproject.toml
@@ -47,13 +47,13 @@ networkx = "^3.1"
 packaging = "^23.1"
 pex = "^2.1.156"
 python = ">=3.10"
-rich = "^13.4.2"
 termcolor = "^2.3.0"
 tomli = "^2.0.1"
 tomli-w = "^1.0.0"
 tomlkit = "^0.13.0"
 typeapi = "^2.0.0"
 typing-extensions = ">=4.6.0"
+loguru = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 localimport = "^1.7.6"
