--- a/.changelog/_unreleased.toml
+++ b/.changelog/_unreleased.toml
@@ -2,10 +2,18 @@
 id = "b6fb5e00-0bed-4e07-8cf3-c16c394d40fe"
 type = "improvement"
 description = "Replace `rich` logger with `loguru` which produces nicer log formatting and requires less setup"
+author = "@NiklasRosenstein"
 
 [[entries]]
 id = "5f259115-ab4d-43d1-b23f-6b2436f26bb2"
 type = "feature"
 description = "Add `buildscript(interpreter_constraint)` argument"
+author = "@NiklasRosenstein"
+component = "kraken-wrapper"
+
+[[entries]]
+id = "9a319506-3900-402f-a40b-ad9052acfbbf"
+type = "fix"
+description = "Detect Pyenv shims in interpreter constraint matching and ignore them by default; and if not ignore, then do not commit their version to the cache as the Python version they represent might change."
 author = "@NiklasRosenstein"
 component = "kraken-wrapper"
