kraken-build/: fix: Fix `dist()` function not using `TaskSet` correctly (regression introduced in 0.37.0, 8840ec5), add `TaskSet.build()` to compensate (#279)
* kraken-build/: fix: Fix `dist()` function not using `TaskSet` correctly (regression introduced in 0.37.0, 8840ec5), add `TaskSet.build()` to compensate

* fix kraken-wrapper test

* fix pytest tasks for kraken-wrapper

--- a/kraken-wrapper/tests/iss-263/dependency/pyproject.toml
+++ b/kraken-wrapper/tests/iss-263/dependency/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Niklas Rosenstein", email = "rosensteinniklas@gmail.com"},
 ]
 dependencies = []
-requires-python = "==3.12.*"
+requires-python = ">=3.10"
 readme = "README.md"
 license = {text = "MIT"}
 
